2003-03-16 Chris Leishman <chris _at_ leishman.org>

 * Fixed bug in --half-close mode where the remote transmit stream wasn't
   actually being half-closed.

2003-01-25 Mauro Tortonesi <mauro _at_ deepspace6.net>

 * Added many more assertions in the code.
 * Cleaned code of the verbose_mode and very_verbose_mode functions.
 * Released netcat 0.4. 

2003-01-24 Chris Leishman <chris _at_ leishman.org>

 * Restructured io_stream, especially with respect to timeout handling.
 * Added --idle-timeout option for setting the idle timeout on the remote
   stream.

2003-01-23 Chris Leishman <chris _at_ leishman.org>

 * Fixed bug with --no-reuseaddr option not being recognized.
 * Fixed bug in readwrite that could result in non-termination.
 * Added --sndbuf-size and --rcvbuf-size options for setting SO_RCVBUF and
   SO_SNDBUF respectively.

2003-01-21 Mauro Tortonesi <mauro _at_ deepspace6.net>

 * Minor changes to the manpage and the other documentation files
   (BUGS, README and TODO).
 * Released netcat 0.3. 
 
2003-01-18 Simone Piunno <simone _at_ deepspace6.net>

 * Merged in i18n branch
   - Full GNU gettext support, and i18n of nc6 source.
   - Initial italian translation.

2003-01-15 Mauro Tortonesi <mauro _at_ deepspace6.net>

 * Merged in mauro_refactor_130103 branch
   - Reorganisation of do_connection and do_listen, mostly by separating into
     a few different utility functions.

2003-01-14 Chris Leishman <chris _at_ leishman.org>

 * Added checking of sin6_scope_id in the address comparison.
 * Added extra checks of getaddrinfo results.

2003-01-13 Chris Leishman <chris _at_ leishman.org>

 * Merged in chris_refactor_060103 branch
   - Reduced connection_attributes to a pure attribute store.
   - Reorganised main such that the buffers and io_streams are initialized
     there.
   - Changed do_connect / do_listen to return an fd/socktype rather than
     setting up the remote_stream directly.
   - Added do_listen_continous() to allow for and inetd like mode.