@@ -1,3 +1,7 @@
+2003-03-26 Chris Leishman <chris _at_ leishman.org>
+
+ * Added --exec option for setting a command to be executed after connect.
+
 2003-03-16 Chris Leishman <chris _at_ leishman.org>
 
  * Fixed bug in --half-close mode where the remote transmit stream wasn't
